@@ -4,7 +4,7 @@
  */
 jQuery.extend(jQuery.validator.messages, {
   required: "Este campo es obligatorio.",
-  remote: "Por favor, rellena esta campo.",
+  remote: "Por favor, rellena este campo.",
   email: "Por favor, escribe una dirección de correo válida",
   url: "Por favor, escribe una URL válida.",
   date: "Por favor, escribe una fecha válida.",
@@ -13,11 +13,11 @@ jQuery.extend(jQuery.validator.messages, {
   digits: "Por favor, escribe sólo dígitos.",
   creditcard: "Por favor, escribe un número de tarjeta válido.",
   equalTo: "Por favor, escribe el mismo valor de nuevo.",
-  accept: "Por favor, escribe una valor con una extensión aceptada.",
+  accept: "Por favor, escribe un valor con una extensión aceptada.",
   maxlength: jQuery.validator.format("Por favor, no escribas más de {0} caracteres."),
   minlength: jQuery.validator.format("Por favor, no escribas menos de {0} caracteres."),
   rangelength: jQuery.validator.format("Por favor, escribe un valor entre {0} y {1} caracteres."),
   range: jQuery.validator.format("Por favor, escribe un valor entre {0} y {1}."),
-  max: jQuery.validator.format("Por favor, escribe un valor igual o menor que {0}."),
-  min: jQuery.validator.format("Por favor, escribe un valor igual o mayor que {0}.")
+  max: jQuery.validator.format("Por favor, escribe un valor menor o igual a {0}."),
+  min: jQuery.validator.format("Por favor, escribe un valor mayor o igual a {0}.")
 });
